# codex-legalist

./: .env.example  .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Codex Legalis.md  DEPLOY_GUIDE.md  Dockerfile  LICENSE  MEMORY.md  Makefile  README.md  SAFETY.md  SECURITY.md  app.py  benchmark.py  competitor.md  deploy-docker.sh  deploy.sh  eslint.config.js  index.html  package.json  project-rules.md  pyproject.toml  pytest.ini  requirements.txt  server.py  test_graph.py  test_trial_safety.py
.opencode/plans/: benchmark-insights-improvements.md
docs/: ALIBABA_CLOUD_PROOF.md  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  DEPLOYMENT.md  SAFETY.md  TESTING.md  Thrivinh Hand-in-Hand Assignment.docx  USAGE.md
legalis/: __init__.py  agents.py  benchmark.py  data.py  parser.py
legalist/: agents.py  benchmark.py  data.py  parser.py
sample_cases/: arson_homicide.txt  contract_breach.txt  cybercrime.txt  fraud.txt  medical_malpractice.txt  theft.txt
src/: __init__.py  audio.py  benchmark_helpers.py  config.py  evidence.py  graph.py  insight.py  jury.py  llm.py  logger.py  nodes.py  prompts.py  schemas.py  security.py  state.py  trial_phases.py  witness.py
static/: app.js  evidence.js  jury.js  state.js  styles.css  transcript.js  ui.js
tests/: conftest.py  test_agents.py  test_comprehensive.py  test_nodes.py  test_parser.py  test_security.py  test_server.py
