[project]
name = "codex-legalist"
version = "1.0.0"
description = "Autonomous Courtroom Simulation — Multi-Agent AI Legal Trial System"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]
ignore = [
    "E501",  # line-too-long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
