[project]
name = "codex-legalist"
version = "1.0.0"
description = "Autonomous Courtroom Simulation — Multi-Agent AI Legal Trial System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "dashscope>=1.20.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
    "openai>=1.30.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]
ignore = [
    "E501",  # line-too-long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
